#61 fix pom