@@ -63,96 +63,4 @@
         </snapshotRepository>
     </distributionManagement>
 
-    <build>
-        <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-            <plugins>
-                <plugin>
-                    <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.1.0</version>
-                </plugin>
-                <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
-                <plugin>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>3.0.2</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.0</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.1</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-war-plugin</artifactId>
-                    <version>3.2.2</version>
-                    <configuration>
-                        <attachClasses>true</attachClasses>
-                        <classesClassifier>classes</classesClassifier>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-install-plugin</artifactId>
-                    <version>2.5.2</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-deploy-plugin</artifactId>
-                    <version>2.8.2</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>${versions.maven.surefire}</version>
-                    <configuration>
-                        <forkMode>always</forkMode>
-                        <!-- otherwise openejb embedded and tomee embedded shares the same context and EJBContainer is broken -->
-                        <reuseForks>false</reuseForks>
-                        <!--<excludes>-->
-                        <!--<exclude>**/PaymentIntegrationTest.java</exclude>-->
-                        <!--<exclude>features/*</exclude>-->
-                        <!--</excludes>-->
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>integration-test</id>
-                            <goals>
-                                <goal>test</goal>
-                            </goals>
-                            <phase>integration-test</phase>
-                            <configuration>
-                                <excludes>
-                                    <exclude>**/*Test.java</exclude>
-                                </excludes>
-                                <!--<includes>-->
-                                <!--<include>**/PaymentIntegrationTest.java</include>-->
-                                <!--</includes>-->
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>${versions.maven.compiler}</version>
-                    <configuration>
-                        <source>${versions.java}</source>
-                        <target>${versions.java}</target>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.tomee.maven</groupId>
-                    <artifactId>tomee-maven-plugin</artifactId>
-                    <version>${versions.tomee}</version>
-                    <configuration>
-                        <!-- From TomEE to TomEE+ to support the web services stack -->
-                        <tomeeClassifier>plus</tomeeClassifier>
-                        <args>-Xmx512m -XX:PermSize=256m</args>
-                        <deployOpenEjbApplication>true</deployOpenEjbApplication>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
-
-
 </project>
